; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_pcm.c_pcm_drv_close.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_pcm.c_pcm_drv_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 (i32)* }

@pud = common dso_local global %struct.TYPE_4__* null, align 8
@cfg = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @pcm_drv_close to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pcm_drv_close(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = call i32 (...) @GET_PUD()
  %4 = load %struct.TYPE_4__*, %struct.TYPE_4__** @pud, align 8
  %5 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 0
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  %8 = load i32 (i32)*, i32 (i32)** %7, align 8
  %9 = load i32, i32* @cfg, align 4
  %10 = call i32 %8(i32 %9)
  %11 = load i32*, i32** %2, align 8
  %12 = call i32 @pcm_drv_free(i32* %11)
  ret i32 %12
}

declare dso_local i32 @GET_PUD(...) #1

declare dso_local i32 @pcm_drv_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
